[gd_scene load_steps=12 format=3 uid="uid://bxp1l23w1kq41"]

[ext_resource type="Script" uid="uid://di5w6db0ha2oa" path="res://Scripts/UI/BooSelect.gd" id="1_teyj1"]
[ext_resource type="StyleBox" uid="uid://comkghpj0djcl" path="res://Resources/UI/Panel.tres" id="2_teyj1"]
[ext_resource type="Texture2D" uid="uid://dtemc0qgag20j" path="res://Assets/Sprites/UI/BooIcon.png" id="3_teyj1"]
[ext_resource type="Script" uid="uid://co6tjg3w6qpd8" path="res://Scripts/Parts/LabelFontChanger.gd" id="4_8f5ot"]
[ext_resource type="Script" uid="uid://ca3bew33g45eq" path="res://Scripts/Classes/UI/PackTextureRect.gd" id="4_ykvrv"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_k7cgt"]
color = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vgde"]
atlas = ExtResource("3_teyj1")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f5ot"]
atlas = ExtResource("3_teyj1")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykvrv"]
atlas = ExtResource("3_teyj1")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yet1"]
atlas = ExtResource("3_teyj1")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbaqk"]
atlas = ExtResource("3_teyj1")
region = Rect2(64, 0, 16, 16)

[node name="WorldSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 104.0
offset_bottom = 56.0
focus_mode = 2
script = ExtResource("1_teyj1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_teyj1")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "MENU_SELECT_BOO"
horizontal_alignment = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer/Label"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/separator = SubResource("StyleBoxLine_k7cgt")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Boo1" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
texture = SubResource("AtlasTexture_1vgde")
stretch_mode = 3
script = ExtResource("4_ykvrv")
metadata/_custom_type_script = "uid://ca3bew33g45eq"

[node name="Cursor" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/Boo1"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -16.0
offset_right = 8.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 0
text = "^"
vertical_alignment = 2
uppercase = true

[node name="Boo2" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
texture = SubResource("AtlasTexture_8f5ot")
stretch_mode = 3
script = ExtResource("4_ykvrv")
metadata/_custom_type_script = "uid://ca3bew33g45eq"

[node name="Cursor" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/Boo2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -16.0
offset_right = 8.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 0
text = "^"
vertical_alignment = 2
uppercase = true

[node name="Boo3" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
texture = SubResource("AtlasTexture_ykvrv")
stretch_mode = 3
script = ExtResource("4_ykvrv")
metadata/_custom_type_script = "uid://ca3bew33g45eq"

[node name="Cursor" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/Boo3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -16.0
offset_right = 8.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 0
text = "^"
vertical_alignment = 2
uppercase = true

[node name="Boo4" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
texture = SubResource("AtlasTexture_1yet1")
stretch_mode = 3
script = ExtResource("4_ykvrv")
metadata/_custom_type_script = "uid://ca3bew33g45eq"

[node name="Cursor" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/Boo4"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -16.0
offset_right = 8.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 0
text = "^"
vertical_alignment = 2
uppercase = true

[node name="Boo5" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
texture = SubResource("AtlasTexture_tbaqk")
stretch_mode = 3
script = ExtResource("4_ykvrv")
metadata/_custom_type_script = "uid://ca3bew33g45eq"

[node name="Cursor" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/Boo5"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -16.0
offset_right = 8.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 0
text = "^"
vertical_alignment = 2
uppercase = true

[node name="LabelFontChanger" type="Node" parent="." node_paths=PackedStringArray("labels")]
script = ExtResource("4_8f5ot")
labels = [NodePath("../PanelContainer/VBoxContainer/Label"), NodePath("../PanelContainer/VBoxContainer/HBoxContainer/Boo1/Cursor"), NodePath("../PanelContainer/VBoxContainer/HBoxContainer/Boo2/Cursor"), NodePath("../PanelContainer/VBoxContainer/HBoxContainer/Boo3/Cursor"), NodePath("../PanelContainer/VBoxContainer/HBoxContainer/Boo4/Cursor"), NodePath("../PanelContainer/VBoxContainer/HBoxContainer/Boo5/Cursor")]
metadata/_custom_type_script = "uid://co6tjg3w6qpd8"
